--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Created by <span class="dev-name">Othmane Benmbarek</span></p>
 
         <div class="icons">
-            <a href="linkedin.com/in/othmane-benmbarek-a014163a5" target="_blank">
+            <a href="https://linkedin.com/in/othmane-benmbarek-a014163a5" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
 
